<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/hello"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/helloSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/theSecond"
            android:textAllCaps="false"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/r1c1"
                android:textSize="34sp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/r1c2"
                android:textSize="34sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/r2c1"
                android:textSize="34sp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/r2c2"
                android:textSize="34sp" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_toEndOf="@id/_1"
            android:text="@string/_2"
            android:textSize="34sp" />

        <Button
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/_2"
            android:layout_alignParentStart="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentBottom="false"
            android:layout_marginTop="30dp"
            android:text="@string/_3"
            android:textSize="34sp" />
    </RelativeLayout>

    <GridLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:columnCount="3"
        android:orientation="horizontal"
        android:rowCount="5">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="1"
            android:textSize="60sp" />


        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="2"
            android:textSize="60sp" />


        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="3"
            android:textSize="60sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="4"
            android:textSize="60sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="5"
            android:textSize="60sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="6"
            android:textSize="60sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="7"
            android:textSize="60sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="8"
            android:textSize="60sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="9"
            android:textSize="60sp" />

    </GridLayout>

</LinearLayout>